@@ -21,6 +21,8 @@
 * Added debugcommand for Visual Studio (xpol)
 * Bug 1674173: Allow source files to have the same name
 * Added forceinclude() to specify forced include files
+* Visual Studio C# projects now support architectures
+* Visual Studio C# projects now support pre- and post-build commands
 
 
 -------
